fix root img spacing

--- a/themes/palebluepixel/src/less/styles.less
+++ b/themes/palebluepixel/src/less/styles.less
@@ -62,6 +62,13 @@ section {
   img {
     margin: 0 auto;
   }
+  & > img[src] {
+    // img that are direct children of section (post bodies) should have
+    // similar spacing to other blocks
+    display: block;
+    margin-top: @padding-large-vertical * 2;
+    margin-bottom: @padding-large-vertical * 2.4;
+  }
   img,
   video {
     .img-responsive();
