--- a/themes/palebluepixel/src/less/typography.less
+++ b/themes/palebluepixel/src/less/typography.less
@@ -7,10 +7,9 @@ ol,
 ul,
 dl,
 address,
-figure,
 iframe,
-section > div,
-video {
+section > div
+ {
   margin-top: 0;
   margin-bottom: @padding-large-vertical * 1.4;
 }
